--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,8 @@
   <h1>The klee Symbolic Virtual Machine</h1>
   <!--*********************************************************************-->
 
-  <p>klee is a symbolic virtual machine built on top of the LLVM
-  compiler infrastructure.</p>
+  <p>klee is a symbolic virtual machine built on top of
+  the <a href="http://llvm.org">LLVM</a> compiler infrastructure.</p>
 
   <p>Stay tuned for more information on public availability. For now,
   there is some information available on
