Web page changes. Added a nice way to format code (div.code) in our CSS file. Added download and install instructions, and a bug report page.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72163 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/www/bugs.html
+++ b/www/bugs.html
@@ -9,25 +9,17 @@
   <link type="text/css" rel="stylesheet" href="content.css">
 </head>
 <body>
-<!--#include virtual="menu.html.incl"-->
+<include virtual="menu.html.incl">
 <div id="content">
   <!--*********************************************************************-->
-  <h1>The KLEE Symbolic Virtual Machine</h1>
+  <h1>KLEE Bug Reports</h1>
   <!--*********************************************************************-->
 
-  <p>KLEE is a symbolic virtual machine built on top of
-  the <a href="http://llvm.org">LLVM</a> compiler infrastructure.</p>
-
-  <p>Stay tuned for more information on public availability. For now,
-  there is some information available on
-  the <a href="http://checking.stanford.edu/wiki/Klee">Stanford
-  Checking Group wiki</a>.</p>
-
-  <p>For more information, see
-  the <a href="http://llvm.org/pubs/2008-12-OSDI-KLEE.html">OSDI
-  2008</a> paper.</p>
+  Please report any bugs in KLEE to
+  the <a href="http://keeda.stanford.edu/mailman/listinfo/klee-dev">klee-dev
+  mailing list</a>.  You need to be subscribe to the list in order to
+  send your report.
 
 </div>
-
 </body>
 </html>
