--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,15 @@
   <!--*********************************************************************-->
 
   <p>KLEE is a symbolic virtual machine built on top of
-  the <a href="http://llvm.org">LLVM</a> compiler infrastructure.</p>
+  the <a href="http://llvm.org">LLVM</a> compiler infrastructure, and available
+  under the UIUC open source license.</p>
 
-  <p>Stay tuned for more information on public availability. For now,
-  there is some information available on
-  the <a href="http://checking.stanford.edu/wiki/Klee">Stanford
-  Checking Group wiki</a>.</p>
-
-  <p>For more information, see
+  <p>For more information on what KLEE is and what it can do, see
   the <a href="http://llvm.org/pubs/2008-12-OSDI-KLEE.html">OSDI
   2008</a> paper.</p>
+
+  <p>If you are interested in trying it yourself, please
+  see <a href="GetStarted.html">Getting Started</a>.</p>
 
 <!--  <p>FIXME: Somewhere need to describe what KLEE can do well and what
       is more "experimental" or research level. This should also address
