Updates to install guide and first tutorial.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72305 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/www/GetStarted.html
+++ b/www/GetStarted.html
@@ -34,8 +34,9 @@ them soon.<p>
 <li>Install llvm-gcc:</li>
 <ul>
 <li>Download and install the LLVM 2.5 release of <tt>llvm-gcc</tt>
-  from <a href="http://llvm.org/releases/download.html">here</a>. It
-  is important to do this first so that it is found in
+  from <a href="http://llvm.org/releases/download.html">here</a>.  Add
+  <tt>llvm-gcc</tt> to your  <tt>PATH</tt>. It
+  is important to do this first so that <tt>llvm-gcc</tt> is found in
   subsequent <tt>configure</tt> steps. <tt>llvm-gcc</tt> will be used
   later to compile programs that KLEE can execute.</li>
 </ul>
@@ -74,11 +75,11 @@ necessary, but KLEE runs very slowly in Debug mode).
 
   <li>Build KLEE (from the KLEE source directory):
     <div class="instr">
-      make
+      make ENABLE_OPTIMIZED=1
     </div>
   </li>
 
-  <li>Run DejaGNU and unit tests to verify your build:
+  <li>Run the regression suite to verify your build:
     <div class="instr">
       make check<br>
       make unittests<br>
