Move the regular expression example to "Tutorial Two".
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72472 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/www/tutorials.html
+++ b/www/tutorials.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <META http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <title>The KLEE Symbolic Virtual Machine</title>
+  <title>KLEE - Tutorials</title>
   <link type="text/css" rel="stylesheet" href="menu.css">
   <link type="text/css" rel="stylesheet" href="content.css">
 </head>
@@ -16,7 +16,11 @@
   <!--*********************************************************************-->
 
   <ol>
-  <li><a href="tutorial-1.html">Tutorial One</a>:  Using KLEE on a toy example</li>
+    <li><a href="tutorial-1.html">Tutorial One</a>: Using KLEE on a toy
+      example.</li>
+
+    <li><a href="Tutorial-2.html">Tutorial Two</a>: Testing a simple regular
+      expression library.</li>
   </ol>
 
 
