--- a/www/tutorial-1.html
+++ b/www/tutorial-1.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <META http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <title>The KLEE Symbolic Virtual Machine</title>
+  <title>KLEE - Tutorial One</title>
   <link type="text/css" rel="stylesheet" href="menu.css">
   <link type="text/css" rel="stylesheet" href="content.css">
 </head>
@@ -116,7 +116,7 @@
 
   <pre class="output">
   $ ktest-tool klee-last/test000001.ktest 
-  bout file  : 'klee-last/test000001.ktest'
+  ktest file : 'klee-last/test000001.ktest'
   args       : ['demo.o']
   num objects: 1
   object    0: name: 'input'
