Changes to webpage to make both tutorials use the same template.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72515 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/www/GetStarted.html
+++ b/www/GetStarted.html
@@ -86,7 +86,7 @@ necessary, but KLEE runs very slowly in Debug mode).
     </div>
   </li>
 
-  <li>You're ready to go!  Go to the <a href="tutorials.html">Tutorials</a> page
+  <li>You're ready to go!  Go to the <a href="Tutorials.html">Tutorials</a> page
   to try KLEE.</li>
 </ol>
 
