--- a/www/Tutorial-1.html
+++ b/www/Tutorial-1.html
@@ -27,7 +27,9 @@
       else return 0;
   } </pre>
 
-  You can find the entire code for this example <a href="code-examples/demo.c">here</a>. 
+  You can find the entire code for this example in the source tree
+  under <tt>examples/islower</tt>.  A version of the source code can
+  also be accessed <a href="resources/islower.c.html">here</a>. 
 
   <h2>Marking input as symbolic</h2> 
 
