--- a/www/Tutorials.html
+++ b/www/Tutorials.html
@@ -16,8 +16,7 @@
   <!--*********************************************************************-->
 
   <ol>
-    <li><a href="tutorial-1.html">Tutorial One</a>: Using KLEE on a toy
-      example.</li>
+    <li><a href="Tutorial-1.html">Tutorial One</a>: Testing a small function.</li>
 
     <li><a href="Tutorial-2.html">Tutorial Two</a>: Testing a simple regular
       expression library.</li>
