Update instructions to suggest using LLVM 2.6.
Also, link TestingCoreutils document from tutorials page.


git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@85025 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/www/GetStarted.html
+++ b/www/GetStarted.html
@@ -42,12 +42,14 @@ targets.<p>
     </ul>
   </li>
 
-  <li><a href="http://www.llvm.org/docs/GettingStarted.html#checkout">Checkout
-      and build LLVM</a> from SVN head (LLVM 2.5 will not work):
+  <li><a href="http://llvm.org/releases/download.html#2.6">Download and build
+      LLVM 2.6</a> (you may also use SVN head, but klee may not always be
+      up-to-date with LLVM API changes).
     
     <div class="instr">
-      $ svn co http://llvm.org/svn/llvm-project/llvm/trunk llvm <br>
-      $ cd llvm <br>
+      $ curl -O http://llvm.org/releases/2.6/llvm-2.6.tar.gz <br>
+      $ tar zxvf llvm-2.6.tar.gz <br>
+      $ cd llvm-2.6 <br>
       $ ./configure --enable-optimized <br>
       $ make
     </div>
