--- a/www/Tutorials.html
+++ b/www/Tutorials.html
@@ -20,6 +20,9 @@
 
     <li><a href="Tutorial-2.html">Tutorial Two</a>: Testing a simple regular
       expression library.</li>
+
+    <li><a href="TestingCoreutils.html">Testing Coreutils</a>: In depth
+      description of how to use KLEE to test GNU Coreutils..</li>
   </ol>
 
 
